[tool.poetry]
name = "PcrdfansAPI"
version = "1.0.0"
description = ""
authors = ["Chendihe4975 <Chendihe4975@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
